# 2D-Irregular-Cutting-Stock-Algorithm

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  LICENSE.md  README.md  geometry.hpp  main.cpp  prelayout  prelayout.cpp  prelayout.cpp:tests
2D Irregular Stock Cutting Algorithm/: .gitignore  2D Irregular Stock Cutting Algorithm.cbp  2D Irregular Stock Cutting Algorithm.depend  CMakeLists.txt  main.cpp
2D Irregular Stock Cutting Algorithm/include/: point.h  polygon.h  read.h  sort.h
2D Irregular Stock Cutting Algorithm/src/: CMakeLists.txt  point.cpp  polygon.cpp  read.cpp  sort.cpp
include/: Item.hpp  Matrix.hpp  Point.hpp  Stock.hpp  _2D_irregular_bin_packing.hpp  algorithm.hpp  approach0.hpp  bin_packing.hpp  boost_geometry_utility.hpp  cluster_util.hpp  divide_and_conquer_approach.hpp  geo_util.hpp  geometry.hpp  io.hpp  libnfporb.hpp  point.hpp  polygon.hpp  polygon_fit.hpp  rasterization.hpp
io/datasets/: albano.txt  dagli.txt  dighe1.txt  jakobs2.txt  marques.txt  poly1a.txt  sample.txt  sample1.txt  trousers.txt
io/datasets/wkt_dataset/blaz/: 13.wkt  22.wkt
io/datasets/wkt_dataset/dagli/: 12.wkt  18.wkt  25.wkt  27.wkt
io/datasets/wkt_dataset/dighe1/: 0.wkt  10.wkt  11.wkt  13.wkt  2.wkt
io/datasets/wkt_dataset/jakobs1/: 19.wkt  23.wkt
io/datasets/wkt_dataset/jakobs2/: 11.wkt  23.wkt  6.wkt  7.wkt
io/datasets/wkt_dataset/marques/: 18.wkt
io/datasets/wkt_dataset/poly1a/: 0.wkt  3.wkt  5.wkt  6.wkt  9.wkt
io/datasets/wkt_dataset/sample/: 2.wkt
io/datasets/wkt_dataset/shirts/: 3.wkt  35.wkt  42.wkt  81.wkt
io/datasets/wkt_dataset/trousers/: 16.wkt  17.wkt  61.wkt
io/initialSolutions/: albano_initial_packing.wkt  blaz_initial_packing.wkt  dagli_initial_packing.wkt  jakobs2_initial_packing.wkt  marques_initial_packing.wkt  poly1a_initial_packing.wkt  sample_initial_packing.wkt  trousers_initial_packing.wkt
io/jakobs1/: 1.wkt  10.wkt  1001.wkt  1002.wkt  1003.wkt  1006.wkt  1007.wkt  1008.wkt  1011.wkt  1012.wkt  1014.wkt  1017.wkt  1018.wkt  1019.wkt  102.wkt  1020.wkt  1021.wkt  1022.wkt  1023.wkt  1029.wkt  1030.wkt  1032.wkt  1033.wkt  1037.wkt  1039.wkt  1041.wkt  1042.wkt  1046.wkt  105.wkt  1050.wkt  1051.wkt  1054.wkt  1055.wkt  1056.wkt  1062.wkt  1069.wkt  1072.wkt  1075.wkt  1076.wkt  1077.wkt  (+4264 more)
io/results/: albanologs.txt  blazlogs.txt  daglilogs.txt  dighe1logs.txt  jakobs1logs.txt  jakobs2logs.txt  marqueslogs.txt  poly1alogs.txt  samplelogs.txt  shirtslogs.txt  trouserslogs.txt
io/results/albano/initial_solution/: initial_packing.wkt  initial_packing_17-08-2020.wkt
io/results/albano/input_polygons_wkt_files/: polygon_003.wkt  polygon_006.wkt  polygon_014.wkt  polygon_022.wkt
io/results/blaz/initial_solution/: initial_packing.wkt
io/results/blaz/input_polygons_wkt_files/: polygon_018.wkt
io/results/dagli/initial_solution/: initial_packing.wkt  initial_packing_17-08-2020.wkt
io/results/dagli/input_polygons_wkt_files/: polygon_005.wkt  polygon_017.wkt  polygon_023.wkt
io/results/dighe1/cuckoo_packingMon Aug 17 12:14:54 2020 interrupted/: feasible_packing_1.wkt  output_log.txt
io/results/dighe1/cuckoo_packingMon Aug 17 13:16:56 2020/: output_log.txt
io/results/dighe1/cuckoo_packingMon Aug 17 15:32:30 2020/: feasible_packing_0.wkt  output_log.txt
io/results/dighe1/initial_solution/: dighe1_sortByDecLen.wkt  dighe1_sortByIncLen.wkt  initial_packing.wkt
io/wkt_dataset/albano/: 1.wkt  18.wkt  21.wkt  8.wkt
io/wkt_dataset/blaz/: 10.wkt  2.wkt  26.wkt  5.wkt
io/wkt_dataset/dagli/: 0.wkt  11.wkt  8.wkt
io/wkt_dataset/dighe1/: 1.wkt  14.wkt  3.wkt  5.wkt  8.wkt  9.wkt
io/wkt_dataset/jakobs1/: 0.wkt  11.wkt  14.wkt  17.wkt  22.wkt  5.wkt
io/wkt_dataset/jakobs2/: 12.wkt  16.wkt  2.wkt  20.wkt  21.wkt  3.wkt
io/wkt_dataset/marques/: 12.wkt  23.wkt  4.wkt
io/wkt_dataset/poly1a/: 2.wkt  4.wkt  8.wkt
io/wkt_dataset/sample/: 0.wkt
io/wkt_dataset/shirts/: 12.wkt  21.wkt  61.wkt  89.wkt
io/wkt_dataset/trousers/: 18.wkt  33.wkt  36.wkt  37.wkt  39.wkt  47.wkt
src/: CMakeLists.txt  Item.cpp  Matrix.cpp  Point.cpp  Stock.cpp  _2D_irregular_bin_packing.cpp  algorithm.cpp  approach0.cpp  bin_packing.cpp  boost_geometry_utility.cpp  cluster_util.cpp  divide_and_conquer_approach.cpp  evaluation.cpp  geo_util.cpp  geometry.cpp  heuristics.cpp  io.cpp  libnfporb.cpp  point.cpp  polygon.cpp  polygon_fit.cpp  rasterization.cpp
tests/: CMakeLists.txt  NFP.cpp  calculate_item_area_test.cpp  demo_test.cpp  find_centroid_of_item_test.cpp  read_input_file_test.cpp  read_items_from_input_file_test.cpp  read_items_from_input_file_test_input.txt
tests/dataset/: albano.txt  blaz.txt  dagli.txt  dighe1.txt  jakobs1.txt  jakobs2.txt  marques.txt  sample.txt  shirts.txt  trousers.txt  tshirt.txt
tests/include/: custom_assertion.hpp
tests/src/: _2D_irregular_bin_packing_test.cpp  cluster_util_test.cpp  find_convex_hull_vacancies_test.cpp  find_opposite_sides_of_vacancies_test.cpp  generate_nfp_test.cpp  geo_util_test.cpp  get_cluster_values.cpp  get_ifr_test.cpp  is_concave_test.cpp  merge_heuristics1_test.cpp  test_with_dataset.cpp
tests/src/Item/: rasterize_test.cpp  rotate_item_test.cpp
tests/src/Matrix/: isIntersecting_test.cpp  rotate90_test.cpp  rotate_test.cpp
tests/src/Stock/: insert_item_test.cpp  isPlaceable_test.cpp
tests/src/algorithm/: orientItems_test.cpp  split_test.cpp  split_test1_input.txt
tests/src/approach0/: approach0_demo_input.txt  approach0_rotate_test.cpp  approach0_split_test.cpp  doesOverlap_test.cpp  minRecArea_test.cpp
tests/src/approach1/: approach1_test.cpp
tests/src/divide_and_conquer_approach/: raster_items_test.cpp  solution_test.cpp
tests/src/geometry/: is_on_segment_test.cpp  is_point_inside_polygon_test.cpp
tests/src/io/: read_items_from_input_file_test.cpp
tests/src/rasterization/: get_raster_matrix_dimension_test.cpp  regionfill_test.cpp  scan_convert_line_test.cpp  translate_to_new_origin_test.cpp
tests/testcases/: concavepolygon1.txt  concavepolygon2.txt  convexpolygon1.txt  convexpolygon2.txt  perfectClustering_test.txt  polygons_data.txt
(+39 files in other folders)
